# cmake_project

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  new_project.py  rename.py
CMake/: SuperBuild.cmake
CMake/boost/: CMakeLists.txt.in  boost.cmake
CMake/googletest/: CMakeLists.txt.in  googletest.cmake
cmake/: findCatch.cmake  findConan.cmake  findOpenMP.cmake
data/: README.md
docs/: README.md
examples/: README.md
extras/: README.md
include/: cmake_project.h
lib/: CMakeLists.txt
lib/submodule_name/: CMakeLists.txt
src/: CMakeLists.txt  README.md  cmake_project.cpp  cmake_project.main.cpp
src/package_name/: CMakeLists.txt
src/package_name/include/: package_name.h
src/package_name/src/: package_name.cpp
src/project_module/: CMakeLists.txt  README.md
src/project_module/include/project_module/: project_module.h
src/project_module/src/: project_module.Test.cpp  project_module.cpp
src/submodule_name/: CMakeLists.txt
src/submodule_name/src/: submodule_name.cpp
test/package_name/: CMakeLists.txt  package_nameTest.cpp
tests/: CMakeLists.txt  README.md  catchMain.cpp
tests/package_name/: CMakeLists.txt
tests/submodule_name/: CMakeLists.txt  submodule_nameTest.cpp
tools/: Jenkinsfile  Jenkinsfile2  README.md  build.sh  jenkins_checkout.sh  package.sh  test.sh
tools/cmake/: findOpenMP.cmake
